networkPolicy_sql.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sql-all
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - {}
