networkPolicy_wordpress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress-all
spec:
  podSelector:
    matchLabels:
      app: wordpress
  ingress:
  - {}
